# rest-client

./: index.html  package.json
src/: App.css  App.jsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/src/: lib.rs
src/components/: Sidebar.jsx  Sidebar.tsx  Titlebar.jsx  Titlebar.tsx
src/hooks/: useDatabase.jsx
